--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "css-modules-require-hook",
   "version": "4.2.3",
   "description": "A require hook to compile CSS Modules on the fly",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "engines": {
     "node": ">= 4"
   },
@@ -41,11 +41,11 @@
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "eslint": "^4.6.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-debug": "^3.1.0",
-    "jest": "^21.0.2",
-    "mocha": "^3.5.1",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-debug": "^4.0.0",
+    "jest": "^27.2.4",
+    "mocha": "^9.1.2",
     "postcss-less": "^1.1.0",
     "pre-commit": "^1.2.2",
     "sinon": "^3.2.1"
@@ -66,9 +66,6 @@
   },
   "scripts": {
     "lint": "eslint src/**/*.js",
-    "prepublish": "npm run transpile",
-    "pretest": "npm run transpile",
-    "test": "NODE_PATH=$(pwd)/test/tokens/node_modules mocha --require test/setup.js --ui tdd test/*/*.js --compilers js:babel-register",
-    "transpile": "gulp --cwd . --gulpfile scripts/gulpfile.js transpile"
+    "test": "NODE_PATH=$(pwd)/test/tokens/node_modules mocha --require test/setup.js --ui tdd test/*/*.js"
   }
 }
